feat: Cambios varios
- Se cambian nombres de componentes sacandole los 'Consultar'
- Empieza el remaster de productos (con imágen, impuestos, descripción, (falta codigo de barra), etc.
- Detalles en mask de productos para mostrar precio con $X,XX.yy
- El RegistrarSuperusuario en login ahora se fija que la contraseña cumpla con validadores de empleado (8 longitud, mayus, min y numero)
- Sugerencias de chechu aplicadas: Nombre y Apellido arriba, usuario, pass y agregado confirmar pass con validador. (falta agregar el notificación service para hacerlo confirmar si desea continuar).

--- a/src/app/modules/productos/consultar-productos/consultar-productos.component.html
+++ b/src/app/modules/productos/consultar-productos/consultar-productos.component.html
@@ -90,11 +90,15 @@
             </ng-container>
             <ng-container matColumnDef="costo">
               <mat-header-cell *matHeaderCellDef>Costo</mat-header-cell>
-              <mat-cell *matCellDef="let producto">{{ producto.costo }}</mat-cell>
+              <mat-cell *matCellDef="let producto">
+                {{ producto.costo | currency:'$':'symbol':'1.2-2' }}
+              </mat-cell>
             </ng-container>
             <ng-container matColumnDef="costoIva">
               <mat-header-cell *matHeaderCellDef>Costo Con Iva</mat-header-cell>
-              <mat-cell *matCellDef="let producto">{{ producto.costoIva }}</mat-cell>
+              <mat-cell *matCellDef="let producto">
+                {{ producto.costoIva | currency:'$':'symbol':'1.2-2' }}
+              </mat-cell>
             </ng-container>
             <ng-container matColumnDef="tipoProducto">
               <mat-header-cell *matHeaderCellDef>Tipo Producto</mat-header-cell>
