--- a/src/app/modules/configuraciones/consultar-configuraciones/consultar-configuraciones.component.html
+++ b/src/app/modules/configuraciones/consultar-configuraciones/consultar-configuraciones.component.html
@@ -10,7 +10,7 @@
   <mat-card class="mat-elevation-z12 p-4">
     <div class="row">
       <div class="col d-flex justify-content-between align-items-center">
-        <p class="titulo">Editar Configuración</p>
+        <p class="titulo">Configuración</p>
       </div>
     </div>
 
