--- a/src/app/modules/promociones/consultar-promociones/consultar-promociones.component.html
+++ b/src/app/modules/promociones/consultar-promociones/consultar-promociones.component.html
@@ -2,7 +2,7 @@
   <mat-card class="mat-elevation-z12 p-4">
     <div class="row">
       <div class="col d-flex justify-content-between align-items-center">
-        <p class="titulo">Consultar promociones</p>
+        <p class="titulo">Promociones</p>
         <button mat-stroked-button color="warn" class="btn round mb-3" (click)="registrarNuevaPromocion()">Registrar nueva promoción</button>
       </div>
     </div>
