--- a/src/app/modules/promociones/notificar-promocion/notificar-promocion.component.html
+++ b/src/app/modules/promociones/notificar-promocion/notificar-promocion.component.html
@@ -2,7 +2,7 @@
   <mat-card class="mat-elevation-z12 p-4">
     <div class="row">
       <div class="col d-flex justify-content-between align-items-center">
-        <p class="titulo">Formulario de publicación</p>
+        <p class="titulo">Notificar Promoción</p>
       </div>
     </div>
 
