--- a/src/app/modules/proveedores/consultar-proveedores/consultar-proveedores.component.html
+++ b/src/app/modules/proveedores/consultar-proveedores/consultar-proveedores.component.html
@@ -2,7 +2,7 @@
     <mat-card class="mat-elevation-z12 p-4">
       <div class="row">
         <div class="col d-flex justify-content-between align-items-center">
-          <p class="titulo">Consultar proveedores</p>
+          <p class="titulo">Proveedores</p>
           <button mat-stroked-button color="warn" class="btn round mb-3" (click)="registrarNuevoProveedor()">Registrar nuevo proveedor</button>
         </div>
       </div>
