--- a/src/app/modules/productos/consultar-productos/consultar-productos.component.scss
+++ b/src/app/modules/productos/consultar-productos/consultar-productos.component.scss
@@ -1,3 +1,12 @@
 .custom-spacing {
-  margin-right: 25px; /* Ajusta el valor según sea necesario */
+  margin-right: 25px;
+}
+
+.img-thumbnail {
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+  border-radius: 4px;
+  border: 1px solid #ddd;
+  margin: 5px 0;
 }
