--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -136,9 +136,9 @@
                 <small class="text-muted">$ {{ producto.costo }}</small>
               </div>
               <div class="d-flex align-items-center col-4 justify-content-center">
-                <button class="btn btn-light btn-sm"(click)="producto.cantidadSeleccionada = producto.cantidadSeleccionada - 1">-</button>
+                <button class="btn btn-light btn-sm"(click)="disminuirCantidad(producto)">-</button>
                 <input type="text" disabled class="form-control form-control-sm mx-2 text-center quantity-input" value="{{producto.cantidadSeleccionada}}">
-                <button class="btn btn-light btn-sm" (click)="producto.cantidadSeleccionada = producto.cantidadSeleccionada + 1">+</button>
+                <button class="btn btn-light btn-sm" (click)="aumentarCantidad(producto)">+</button>
               </div>
               <div class="text-end col-4">
                 <h5 class="m-0"><b>$ {{ producto.costo * producto.cantidadSeleccionada }}</b></h5>
