--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.scss
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.scss
@@ -24,7 +24,7 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
   position: relative;
   height: 150px;
-  margin-bottom: 15px;
+  padding: 10px;
 }
 
 /* Círculo con la cantidad seleccionada */
