feat: refactor general
- Spinner de angular, mejor inversión
- Los componentes: Empleados, Proveedores, Productos ahora dicen 'Volver' cuando se consulta con el ojo (no tiene sentido que diga modificar, si solo querés verlo).
- Eliminado DetalleEmpleado (no se usa)
- ¿Algo de responsividad en SCSS?
- Agregados algunos Validators.Required en Empleados porque la base los pide pero el front permitía no mandarlos.
- Ahora la imagen de productos solo se puede modificar si estás en modo modificar y no al visualizar (y se pone más opaca)

Espero que haya menos testing =)

BUG: No deja modificar Empleado/Proveedor si no re-ingresas el domicilio - REVISAR.

--- a/src/app/modules/configuraciones/consultar-configuraciones/consultar-configuraciones.component.html
+++ b/src/app/modules/configuraciones/consultar-configuraciones/consultar-configuraciones.component.html
@@ -124,12 +124,9 @@
       </div>
     </div>
 
-    <div class="lds-spinner-wrapper" *ngIf="isLoading">
-      <div class="lds-spinner">
-        <div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div>
-      </div>
+    <!-- loading -->
+    <div class="spinner-wrapper" *ngIf="isLoading">
+      <mat-spinner></mat-spinner>
     </div>
   </mat-card>
 </div>
