--- a/src/app/modules/promociones/registrar-promocion/registrar-promocion.component.html
+++ b/src/app/modules/promociones/registrar-promocion/registrar-promocion.component.html
@@ -47,13 +47,13 @@
   <mat-divider></mat-divider>
   <br>
 
-  <!-- Btn de buscar y limpiar -->
+  <!-- Btn de cancelar y registrar -->
   <div class="row text-right">
     <div class="col d-flex justify-content-end">
       <button mat-button color="accent" class="btn round" (click)="cancelar()" id="btnLimpiarFiltro">
         Cancelar
       </button>
-      <button mat-raised-button color="accent" class="btn round" (click)="registrarPromocion()" id="btnBuscar">Registar</button>
+      <button mat-raised-button color="accent" class="btn round" (click)="registrarPromocion()" id="btnBuscar">Registrar</button>
     </div>
   </div>
 
