--- a/src/app/modules/empleados/consultar-empleados/consultar-empleados.component.html
+++ b/src/app/modules/empleados/consultar-empleados/consultar-empleados.component.html
@@ -48,7 +48,9 @@
   </mat-card-header>
 
   <!-- loading -->
-  <div class="lds-spinner-wrapper" *ngIf="empleados.length == 0"><div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div></div>
+  <div class="spinner-wrapper" *ngIf="empleados.length == 0">
+    <mat-spinner></mat-spinner>
+  </div>
 
   <mat-card *ngIf="empleados.length > 0">
     <mat-card-content>
