--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -67,12 +67,9 @@
               </button>
             </div>
 
-            <div class="lds-spinner-wrapper" *ngIf="isValidatingPassword">
-              <div class="lds-spinner">
-                <div></div><div></div><div></div><div></div>
-                <div></div><div></div><div></div><div></div>
-                <div></div><div></div><div></div><div></div>
-              </div>
+            <!-- loading -->
+            <div class="spinner-wrapper" *ngIf="isValidatingPassword">
+              <mat-spinner></mat-spinner>
             </div>
           </div>
 
