--- a/src/app/modules/productos/registrar-producto/registrar-producto.component.html
+++ b/src/app/modules/productos/registrar-producto/registrar-producto.component.html
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col d-flex justify-content-between align-items-center">
       <p class="titulo">{{esConsulta ? 'Consultar producto' : 'Registrar producto'}}</p>
-      <button *ngIf="esConsulta" class="btn" mat-icon-button matTooltip="Modificar">
+      <button *ngIf="esConsulta" class="btn" mat-icon-button matTooltip="Modificar" (click)="habilitarEdicion()">
         <mat-icon class="editar">edit</mat-icon>
       </button>
     </div>
@@ -124,27 +124,29 @@
     <div class="col-md-4">
       <div class="upload-container d-flex align-items-center mb-3"
            (dragover)="onDragOver($event)"
-           (drop)="onDrop($event)">
+           (drop)="onDrop($event)"
+           [ngClass]="{'disabled-container': data.formDesactivado}">
         <img *ngIf="productoImg" [src]="productoImg" class="preview-img">
         <span *ngIf="!productoImg" class="upload-text">Arrastra aquí...</span>
-        <input type="file" class="file-input" (change)="onFileSelected($event)">
+        <input type="file" class="file-input" [attr.disabled]="data.formDesactivado ? true : null" (change)="onFileSelected($event)">
       </div>
     </div>
 
     <mat-divider></mat-divider>
     <br>
     <div class="row text-right">
-      <div class="col d-flex justify-content-end">
-        <button mat-button color="accent" class="btn round" (click)="cancelar()" id="btnLimpiarFiltro">
-          Cancelar
-        </button>
-        <button *ngIf="!esConsulta" mat-raised-button color="accent" class="btn round" (click)="registrarProducto()" id="btnBuscar">
-          Registrar
-        </button>
-        <button *ngIf="esConsulta" mat-raised-button color="accent" class="btn round" (click)="modificarProducto()" id="btnBuscar2">
-          Modificar
-        </button>
+
+      <!-- Btn de cancelar, registrar y modificar -->
+      <div class="row text-right">
+        <div class="col d-flex justify-content-end">
+          <button mat-button color="accent" class="btn round" (click)="cancelar()" id="btnLimpiarFiltro">
+            {{ (!data.editar && esConsulta) ? 'Volver' : 'Cancelar' }}
+          </button>
+          <button *ngIf="!esConsulta" mat-raised-button color="accent" class="btn round" (click)="registrarProducto()" id="btnBuscar">Registrar</button>
+          <button *ngIf="data.editar" mat-raised-button color="accent" class="btn round" (click)="modificarProducto()" id="btnBuscar2">Modificar</button>
+        </div>
       </div>
+
     </div>
     <br>
   </div>
