--- a/src/app/modules/promociones/notificar-promocion/notificar-promocion.component.html
+++ b/src/app/modules/promociones/notificar-promocion/notificar-promocion.component.html
@@ -69,12 +69,9 @@
       </div>
     </form>
 
-    <div class="lds-spinner-wrapper" *ngIf="isLoading">
-      <div class="lds-spinner">
-        <div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div>
-      </div>
+    <!-- loading -->
+    <div class="spinner-wrapper" *ngIf="isLoading">
+      <mat-spinner></mat-spinner>
     </div>
   </mat-card>
 </div>
