--- a/src/app/modules/proveedores/consultar-proveedores/consultar-proveedores.component.html
+++ b/src/app/modules/proveedores/consultar-proveedores/consultar-proveedores.component.html
@@ -48,8 +48,9 @@
     </mat-card-header>
 
     <!-- loading -->
-    <div class="lds-spinner-wrapper" *ngIf="proveedores.length == 0"><div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div></div>
-
+    <div class="spinner-wrapper" *ngIf="proveedores.length == 0">
+      <mat-spinner></mat-spinner>
+    </div>
 
     <mat-card *ngIf="proveedores.length > 0">
       <mat-card-content>
