--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
-
 @import '@ctrl/ngx-emoji-mart/picker';
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html, body {
+  height: 100%;
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 .titulo {
   font-weight: 500;
@@ -28,15 +35,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 #btnLimpiarFiltro {
   color: #e15b35;
-  margin-right: 14px;
+  margin-right: 1rem;
 }
 
-#btnBuscar {
-  background-color: #e15b35;
-  color: white;
-}
-
-#btnBuscar2 {
+#btnBuscar, #btnBuscar2 {
   background-color: #e15b35;
   color: white;
 }
@@ -53,6 +55,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   color: #9f1212;
 }
 
+.col-md-3, .col-md-2 {
+  min-width: 200px;
+}
+
 .lds-spinner-wrapper {
   display: flex;
   justify-content: center;
@@ -60,52 +66,57 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   height: 10vh;
 }
 
-.lds-spinner {
-  color: #f18451;
-  display: inline-block;
-  position: relative;
-  width: 40px;
-  height: 40px;
+.mat-mdc-progress-spinner {
+  --mdc-circular-progress-active-indicator-color: #f18451;
 }
 
-.lds-spinner div {
-  transform-origin: 20px 20px;
-  animation: lds-spinner 1.2s linear infinite;
+.spinner-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 10vh;
+  zoom: 0.6;
 }
 
-.lds-spinner div:after {
-  content: " ";
-  display: block;
-  position: absolute;
-  top: 1.6px;
-  left: 18.4px;
-  width: 3.2px;
-  height: 8.8px;
-  border-radius: 20%;
-  background: currentColor;
+.mdc-text-field--outlined:not(.mdc-text-field--disabled).mdc-floating-label {
+  color: #f59f8a !important;
 }
 
-.mdc-text-field--outlined:not(.mdc-text-field--disabled).mdc-floating-label{
-  color: #f59f8a!important;
-}
-
-.lds-spinner div:nth-child(1) { transform: rotate(0deg); animation-delay: -1.1s; }
-.lds-spinner div:nth-child(2) { transform: rotate(30deg); animation-delay: -1s; }
-.lds-spinner div:nth-child(3) { transform: rotate(60deg); animation-delay: -0.9s; }
-.lds-spinner div:nth-child(4) { transform: rotate(90deg); animation-delay: -0.8s; }
-.lds-spinner div:nth-child(5) { transform: rotate(120deg); animation-delay: -0.7s; }
-.lds-spinner div:nth-child(6) { transform: rotate(150deg); animation-delay: -0.6s; }
-.lds-spinner div:nth-child(7) { transform: rotate(180deg); animation-delay: -0.5s; }
-.lds-spinner div:nth-child(8) { transform: rotate(210deg); animation-delay: -0.4s; }
-.lds-spinner div:nth-child(9) { transform: rotate(240deg); animation-delay: -0.3s; }
-.lds-spinner div:nth-child(10) { transform: rotate(270deg); animation-delay: -0.2s; }
-.lds-spinner div:nth-child(11) { transform: rotate(300deg); animation-delay: -0.1s; }
-.lds-spinner div:nth-child(12) { transform: rotate(330deg); animation-delay: 0s; }
-@keyframes lds-spinner {
-  0% {
-    opacity: 1;
+@media (max-width: 1200px) {
+  .titulo {
+    font-size: 1.8rem;
   }
-  100% {
-    opacity: 0;
+}
+
+@media (max-width: 992px) {
+  .titulo {
+    font-size: 1.6rem;
+  }
+
+  .mat-spinner {
+    width: 3rem;
+    height: 3rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .titulo {
+    font-size: 1.4rem;
+  }
+
+  .mat-spinner {
+    width: 2.5rem;
+    height: 2.5rem;
+  }
+}
+
+@media (max-width: 576px) {
+  .titulo {
+    font-size: 1.2rem;
+  }
+
+  .mat-spinner {
+    width: 2rem;
+    height: 2rem;
   }
 }
